[package]
name = "geph4-exit"
version = "0.5.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>", "Geph Project <contact@geph.io"]
edition = "2018"
description="Exit node for Geph"
license="GPL-3.0-only"
repository="https://github.com/geph-official/geph4-exit"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# binder_transport = {path="../lib/binder_transport"}
smol= "1.2.5"
env_logger = "0.9.1"
log= "0.4.17"
structopt= "0.3.26"
ed25519-dalek={ version = "1.0.1", features = ["serde"] }
rand = "0.7.3"
bincode= "1.3.3"
anyhow= "1.0.65"
hex= "0.4.3"
x25519-dalek={ version = "1.2.0", features = ["serde"] }
sosistab= "0.5"
#sosistab={ path="../sosistab"}
blake3= "1.3.1"
serde= "1.0.145"
# mizaru={path="../lib/mizaru"} 
once_cell= "1.15.0"
smolscale = "0.3.42"
# smolscale={path="../smolscale"}
smol-timeout = "0.6.0"
statsd = "0.14.1"
num_cpus= "1.13.1"
scopeguard= "1.1.0"
parking_lot= "0.11.2"
# tundevice={path="../lib/tundevice"} 
# jemalloc-ctl= "0.3.3"
bytes= "1.2.1"
lru= "0.6.6"
pnet_packet= "0.28.0"
rangemap= "0.1.14"
dashmap= "4.0.2"
governor= "0.3.2"
libc = "0.2.135"
os_socketaddr= "0.2.3"
ureq= "1.5.5"
flate2= "1.0.24"
async-dup= "1.2.2"
fastrand= "1.8.0"

cached= "0.26.2"
rustc-hash= "1.1.0"

futures-util= "0.3.24"
geph4-binder-transport = "0.1.3"
geph4-aioutils = "0.1.3"
geph4-protocol = "0.4.13"
mizaru = "0.1.3"
# tundevice = "0.1.4"
tun= "0.5.4"
rand_chacha= "0.2.2"
# reed-solomon-erasure = { version = "4.0.2", features = [ "simd-accel" ] }
getset = "0.1.2"

toml= "0.5.9"
serde_json = "1.0.86"
flume = "0.10.14"
event-listener = "2.5.3"
tap = "1.0.1"
moka = "0.9.4"
cidr-utils = { version = "0.5.7", features = ["serde"] }
socket2 = "0.4.7"
byteorder = "1.4.3"
nix = "0.25.0"
async-trait = "0.1.58"
smol_str = "0.1.23"
sysinfo = "0.26.5"

mimalloc = { version = "0.1.30"}

[profile.release]
panic = "abort"
opt-level=3
debug=2
# lto=false

[patch.crates-io]
# smolscale={path="../smolscale"}
# sosistab={path="../sosistab"}
