[package]
name = "geph4-exit"
version = "0.10.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>", "Geph Project <contact@geph.io"]
edition = "2021"
description="Exit node for Geph"
license="GPL-3.0-only"
repository="https://github.com/geph-official/geph4-exit"

[patch.crates-io]
# sosistab2={git="https://github.com/geph-official/sosistab2"}



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# binder_transport = {path="../lib/binder_transport"}
smol= "1.3.0"
env_logger = "0.9.3"
log= "0.4.20"
structopt= "0.3.26"
ed25519-dalek={ version = "1.0.1", features = ["serde"] }
rand = "0.7.3"
bincode= "1.3.3"
anyhow= "1.0.75"
hex= "0.4.3"
x25519-dalek={ version = "1.2.0", features = ["serde"] }

blake3= "1.5.0"
serde= "1.0.188"
once_cell= "1.18.0"
smolscale = "0.4"
smol-timeout = "0.6.0"
statsd = "0.14.1"
num_cpus= "1.16.0"
scopeguard= "1.2.0"
parking_lot= "0.11.2"
# tundevice={path="../lib/tundevice"} 
# jemalloc-ctl= "0.3.3"
bytes= "1.5.0"

pnet_packet= "0.28.0"
rangemap= "0.1.14"
dashmap= "4.0.2"
governor= "0.3.2"
libc = "0.2.149"
os_socketaddr= "0.2.5"
ureq= "1.5.5"
flate2= "1.0.27"
async-dup= "1.2.2"
fastrand= "1.9.0"

cached= "0.26.2"
rustc-hash= "1.1.0"

futures-util= "0.3.28"

geph4-aioutils = "0.1.5"
geph4-protocol = "0.16.9"
# geph4-protocol={path="../geph4-protocol"}
mizaru = "0.1.3"
tun= "0.5.5"
rand_chacha= "0.2.2"
getset = "0.1.2"

toml= "0.5.11"
serde_json = "1.0.107"
flume = "0.10.14"
event-listener = "2.5.3"
tap = "1.0.1"
moka = "0.9.9"
cidr-utils = { version = "0.5.11", features = ["serde"] }
socket2 = "0.4.9"
byteorder = "1.5.0"
nix = "0.25.1"
async-trait = "0.1.73"
smol_str = "0.1.24"
sysinfo = "0.26.9"

# mimalloc = { version = "0.1.30", default-features=false}
stdcode = "0.1.14"
# sosistab2 = "0.9.7"

sosistab2="0.10"
sosistab2-obfsudp="0.1"
sosistab2-obfstls="0.1"

nanorpc = "0.1.12" 
closure = "0.3.0"
async-recursion = "1.0.5"
arrayref = "0.3.7"
native-tls = "0.2.11"
rcgen = "0.10.0"
priority-async-mutex = "0.1.1"
atomic_float = "0.1.0"
jemallocator = "0.5.4"
priority-queue = "1.3.2"
# jemallocator-global = "0.3.2"


[profile.release]
panic = "abort"
opt-level=3
debug=1
# lto=false

